--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-gray-100 text-gray-800 pb-28">
+  <body class="bg-gray-100 text-gray-800">
     <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
